Add additional tests to exercise addExports/addOpens with --illegal-access